--- a/Project.toml
+++ b/Project.toml
@@ -3,9 +3,9 @@ uuid = "4047365c-aa37-44ec-b1fa-4c0d5495ccf1"
 version = "1.0.0"
 
 [deps]
-AwsC = "e152505b-a699-490f-9541-997267120aa8"
+LibAwsCommon = "c6e421ba-b5f8-4792-a1c4-42948de3ed9d"
+LibAwsIO = "a5388770-19df-4151-b103-3d71de896ddf"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
-aws_c_io_jll = "13c41daa-f319-5298-b5eb-5754e0170d52"
 
 [compat]
 julia = "1.6"
