--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,8 @@ Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 
 [compat]
 julia = "1.6"
+LibAwsIO = "1.2.1"
+LibAwsCommon = "1.2.1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
